<resources>
    <string name="app_name">Findots</string>

    <!-- for distance matrix -->
    <string name="server_key">AIzaSyCRX0qWezw-DjshmhwMa65TrVoRyd9I48A</string>

    <string name="noInternet">The Internet Connection Appears to be Offline</string>
    <string name="logout">Logout</string>
    <string name="openDrawer">open drawer</string>
    <string name="closeDrawer">close drawer</string>
    <string name="network_available">Connected to </string>
    <string name="network_not_available">Network is not available</string>
    <string name="title_activity_login">Sign in</string>
    <string name="grant">GRANT</string>
    <string name="enable">ENABLE</string>
    <string name="runtime_permissions_txt">Please enable ALL permissions from app settings.</string>
    <string name="tracking_list">Tracking List</string>
    <string name="destinations">Destinations</string>
    <string name="all">All</string>
    <string name="messages">Messages</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="send">Send</string>
    <string name="data_error">There is a technical issue. Please try after sometime.</string>
    <string name="sucessful_registration">Successfully Registered. Please Login with your credentials.</string>
    <string name="bd"><b>Bridgetree Research Services Pvt Ltd.</b> Second Floor, Panchajanya Towers,
         1022/33, Dr Rajkumar Road, 4th Block, Rajaji Nagar,Bangalore, Karnataka 560010.</string>
    <string name="no_address">No Address</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="join_team">Please provide a coupon code to join team.</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>


    <!-- Login -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="donthaveaccount">Don\'t have account?</string>
    <string name="signup"><u>Sign Up</u></string>
    <string name="validate_email">Please enter valid EmailID</string>
    <string name="prompt_required">This field is required</string>
    <string name="prompt_password">This password is too short</string>
    <string name="admin">Admin</string>
    <string name="adminAlert">Please click on ADMIN button if you are trying to access the admin panel.</string>

    <!-- Register -->
    <string name="signup_heading">Sign Up</string>
    <string name="create_accnt">Create Account</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="emailid_mobilenumber">Email ID/Mobile Number</string>
    <string name="emailid">Email ID</string>
    <string name="mobileno">Mobile No.</string>
    <string name="redeemcode">Redeem Code</string>
    <string name="agree">By Signing Up, you agree to our</string>
    <string name="termsCondition"><u>T&amp;C</u></string>
    <string name="create_account">Create Account</string>
    <string name="please_agree">Please agree the terms and conditions.</string>

    <string name="no_loc_avail">Unable to fetch your location data</string>
    <!-- Destinations -->
    <string name="checkin">Check In</string>
    <string name="checkout">Check Out</string>
    <string name="checkedout_at">Checked Out at</string>
    <string name="failed">Failed</string>
    <string name="checkin_failed">Check In Failed</string>
    <string name="checkout_failed">Check Out Failed</string>
    <string name="update_destination">Update Destination</string>
    <string name="modify">Not the right location? Modify</string>
    <string name="options">Options</string>
    <string name="schedule">Schedule</string>
    <string name="modifyDestination">Modify Destination</string>
    <string name="add_destination">Add Destination</string>
    <string name="new_destination">New Destination</string>
    <string name="modify_destination_name">Update Destination Name</string>
    <string name="modify_destination_namehint">Enter Destination Name</string>
    <string name="schedulevisitDate">Schedule Your Visit Date</string>
    <string name="schedulevisitTime">Schedule Your Visit Time</string>

    <string name="modify_destinationError">Unable to Modify Destination</string>
    <string name="add_destinationError">Unable to Add New Destination</string>
    <string name="delete_destinationError">Unable to Delete Destination</string>
    <string name="checkin_offline">Reloading Data After Offline ChekIn</string>
    <string name="checkout_offline">Reloading Data After Offline ChekOut</string>
    <string name="destination_name">Enter Destination Name</string>
    <string name="not_the_right_destination">Please Check In when you reach the destination</string>

    <string name="delete_destinationalert">Do you want to Delete Destination : </string>
    <string name="delete">Delete </string>
    <string name="reschedule">Reschedule</string>
    <!--Edit Destination popup items-->

    <string name="modify_destinationName">Rename Destination</string>
    <string name="modify_destinationLoc">Modify Location</string>
    <string name="delete_destination">Delete Destination</string>
    <string name="chat_watsapp">Chat on whatsapp</string>
    <string name="msg_watsapp">Message from </string>
    <string name="no_destination_assigned">No Destination Assigned for you</string>
    <string name="km">Km</string>

    <!--Move Map Location to Pin Point-->


    <!-- Strings related to login -->
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- Strings related to Menu Screen -->
    <string name="report_loc_success">Your Location Informations are Updated</string>
    <string name="report_loc_fail">Unable to Update Your Location Information</string>

    <string-array name="menu_items">
        <item>Destinations</item>
        <item>Report My Location</item>
        <item>Join a Team</item>
        <item>Profile</item>
        <item>Help</item>
        <item>Logout</item>
    </string-array>

    <string-array name="admin_menu_items">
        <item>Dashboard</item>
        <item>Account Settings</item>
        <item>Help</item>
        <item>Logout</item>
    </string-array>

    <string name="title_activity_maps">Map</string>


    <!-- Strings related to Account Settings -->
    <string name="account_heading">Profile</string>
    <string name="save_account">Save</string>
    <string name="changepwd">Change Password</string>
    <string name="account_updateInfo">Your Account settings Updated</string>
    <string name="account_updateInfoError">Unable to Update Account settings</string>

    <!-- Strings related to Change Password -->
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_newPassword">Confirm New  Password</string>
    <string name="password_cannotBeSame">current and old password cannot be same</string>
    <string name="password_same">confirm and new passwords should be same</string>
    <string name="password_updateInfoError">Unable to Update Password</string>

    <!-- Store Screen Strings -->
    <string name="in">IN</string>
    <string name="out">OUT</string>


    <!-- User Types -->
    <string-array name="userTypes">
        <item>Individual</item>
        <item>Corporate</item>
        <item>CorporateAdmin</item>
        <item>Web User Admin</item>
        <item>Country Specific Admin</item>
    </string-array>

    <!-- User Type IDs-->
    <string-array name="userTypeIDs">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>
