<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ImageView_logo"
        android:layout_width="@dimen/imageView_logo_width_height"
        android:layout_height="@dimen/imageView_logo_width_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/imageView_logo_marginTop"
        android:contentDescription="@string/app_name"
        android:src="@drawable/splash_logo" />

    <EditText
        android:id="@+id/EditText_userName"
        style="@style/edittext"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edittext_height"
        android:hint="@string/username"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/EditText_password"
        style="@style/edittext"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edittext_height"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/Button_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:layout_marginLeft="@dimen/login_button_marginLeftAndRight"
        android:layout_marginRight="@dimen/login_button_marginLeftAndRight"
        android:layout_marginTop="@dimen/login_button_marginTop"
        android:background="@drawable/selector_login"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/login_button_textSize" />

    <TextView
        android:id="@+id/TextView_forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/textView_forgotPassword_marginTop"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/app_color"
        android:textSize="@dimen/textView_forgotPassword_textSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/TextView_donthaveaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/signup_marginBottom"
            android:text="@string/donthaveaccount"
            android:textColor="@color/grey"
            android:textSize="@dimen/textview_donthaveaccount_textSize" />

        <TextView
            android:id="@+id/TextView_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/signup_marginBottom"
            android:layout_marginLeft="@dimen/signup_marginLeft"
            android:text="@string/signup"
            android:textColor="@color/app_color"
            android:textSize="@dimen/textview_signup_textSize" />

    </LinearLayout>

</LinearLayout>