<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        android:paddingTop="@dimen/tool_bar_paddingTop"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tool_bar"
        android:background="@drawable/login_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <EditText
                android:id="@+id/editText_current_password"
                style="@style/edittext"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edittext_height"
                android:layout_marginTop="@dimen/firsttext_topMargin"
                android:hint="@string/current_password"
                android:inputType="textPassword"
                android:textSize="@dimen/accntSetting_edtTextSize"
                android:ellipsize="end"
                android:maxLines="1"/>
            <EditText
                android:id="@+id/editText_new_password"
                style="@style/edittext"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edittext_height"
                android:layout_marginTop="@dimen/register_edittexts_marginTop"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:textSize="@dimen/accntSetting_edtTextSize"
                android:ellipsize="end"
                android:maxLines="1"/>

            <EditText
                android:id="@+id/editText_conf_new_password"
                style="@style/edittext"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edittext_height"
                android:layout_marginTop="@dimen/register_edittexts_marginTop"
                android:hint="@string/confirm_newPassword"
                android:inputType="textPassword"
                android:textSize="@dimen/accntSetting_edtTextSize"
                android:ellipsize="end"
                android:maxLines="1"/>





            <Button
                android:id="@+id/Button_createAccount"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_height"
                android:layout_marginLeft="@dimen/login_button_marginLeftAndRight"
                android:layout_marginRight="@dimen/login_button_marginLeftAndRight"
                android:layout_marginTop="@dimen/button_saveAccount_marginTop"
                android:background="@drawable/selector_login"
                android:text="@string/changepwd"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/login_button_textSize" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>