<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="5dp"
    android:background="@drawable/selector_white_bg"
    android:orientation="vertical">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />

    <EditText
        android:id="@+id/EditText_FrgtPswdUsername"
        style="@style/edittext"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edittext_height"
        android:layout_marginTop="@dimen/login_edittext_marginTop"
        android:hint="@string/username"
        android:inputType="textEmailAddress" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/Button_cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_height"
            android:layout_weight="1"
            android:background="@drawable/selector_send"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/login_button_textSize"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

        <Button
            android:id="@+id/Button_send"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_height"
            android:layout_weight="1"
            android:background="@drawable/selector_send"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/login_button_textSize"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
    </LinearLayout>
</LinearLayout>